{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 94,
  "lineage": "f17cc3f7-033d-3ad0-778d-fa3509cde800",
  "resources": [
    {
      "module": "module.eks_primary",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:872515281253:security-group/sg-075c0c8ec9a1c2d5f",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-075c0c8ec9a1c2d5f",
            "ingress": [],
            "name": "argocd-primary-cluster-20260306190142914000000014",
            "name_prefix": "argocd-primary-cluster-",
            "owner_id": "872515281253",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "argocd-primary-cluster"
            },
            "tags_all": {
              "Name": "argocd-primary-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-0afb44932285d5d3c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_primary",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:872515281253:security-group/sg-08de764657b7e9d73",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-08de764657b7e9d73",
            "ingress": [],
            "name": "argocd-primary-node-20260306190144532000000017",
            "name_prefix": "argocd-primary-node-",
            "owner_id": "872515281253",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "argocd-primary-node",
              "kubernetes.io/cluster/argocd-primary": "owned"
            },
            "tags_all": {
              "Name": "argocd-primary-node",
              "kubernetes.io/cluster/argocd-primary": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0afb44932285d5d3c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_primary",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-255645020",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-075c0c8ec9a1c2d5f",
            "security_group_rule_id": "sgr-0e180a9e3493cc9bf",
            "self": false,
            "source_security_group_id": "sg-08de764657b7e9d73",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_primary.aws_security_group.cluster",
            "module.eks_primary.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_primary",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-1695629634",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-08de764657b7e9d73",
            "security_group_rule_id": "sgr-0f7da6d08ecb306ca",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_primary.aws_security_group.cluster",
            "module.eks_primary.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-290365076",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-08de764657b7e9d73",
            "security_group_rule_id": "sgr-04c41828b31d574f8",
            "self": false,
            "source_security_group_id": "sg-075c0c8ec9a1c2d5f",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_primary.aws_security_group.cluster",
            "module.eks_primary.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-898576699",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-08de764657b7e9d73",
            "security_group_rule_id": "sgr-01c4710d18b23cf2b",
            "self": false,
            "source_security_group_id": "sg-075c0c8ec9a1c2d5f",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_primary.aws_security_group.cluster",
            "module.eks_primary.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-4241315501",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-08de764657b7e9d73",
            "security_group_rule_id": "sgr-0759bf4f0632b226a",
            "self": false,
            "source_security_group_id": "sg-075c0c8ec9a1c2d5f",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_primary.aws_security_group.cluster",
            "module.eks_primary.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-4019284620",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-08de764657b7e9d73",
            "security_group_rule_id": "sgr-0239a8533874a726e",
            "self": false,
            "source_security_group_id": "sg-075c0c8ec9a1c2d5f",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_primary.aws_security_group.cluster",
            "module.eks_primary.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-2335201607",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-08de764657b7e9d73",
            "security_group_rule_id": "sgr-028cd65018cf62669",
            "self": false,
            "source_security_group_id": "sg-075c0c8ec9a1c2d5f",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_primary.aws_security_group.cluster",
            "module.eks_primary.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-3776961579",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-08de764657b7e9d73",
            "security_group_rule_id": "sgr-0b2cf1e2bbe56f21c",
            "self": false,
            "source_security_group_id": "sg-075c0c8ec9a1c2d5f",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_primary.aws_security_group.cluster",
            "module.eks_primary.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-1451125434",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-08de764657b7e9d73",
            "security_group_rule_id": "sgr-0dde90e882da4a12b",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_primary.aws_security_group.cluster",
            "module.eks_primary.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-3613130121",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-08de764657b7e9d73",
            "security_group_rule_id": "sgr-07e24a21b80d3a606",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_primary.aws_security_group.cluster",
            "module.eks_primary.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-1929666150",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-08de764657b7e9d73",
            "security_group_rule_id": "sgr-07a961623df8859da",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_primary.aws_security_group.cluster",
            "module.eks_primary.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_secondary",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:872515281253:security-group/sg-05896545e4f2e7503",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-05896545e4f2e7503",
            "ingress": [],
            "name": "argocd-secondary-cluster-20260306190142914800000015",
            "name_prefix": "argocd-secondary-cluster-",
            "owner_id": "872515281253",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "argocd-secondary-cluster"
            },
            "tags_all": {
              "Name": "argocd-secondary-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-0afb44932285d5d3c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_secondary",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:872515281253:security-group/sg-03e147ca6a2c0e557",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-03e147ca6a2c0e557",
            "ingress": [],
            "name": "argocd-secondary-node-20260306190145769700000019",
            "name_prefix": "argocd-secondary-node-",
            "owner_id": "872515281253",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "argocd-secondary-node",
              "kubernetes.io/cluster/argocd-secondary": "owned"
            },
            "tags_all": {
              "Name": "argocd-secondary-node",
              "kubernetes.io/cluster/argocd-secondary": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0afb44932285d5d3c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_secondary",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-4267024129",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-05896545e4f2e7503",
            "security_group_rule_id": "sgr-02c0e9bc5da4b9357",
            "self": false,
            "source_security_group_id": "sg-03e147ca6a2c0e557",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_secondary.aws_security_group.cluster",
            "module.eks_secondary.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_secondary",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-662044304",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-03e147ca6a2c0e557",
            "security_group_rule_id": "sgr-01c8e4bea9ca34f7d",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_secondary.aws_security_group.cluster",
            "module.eks_secondary.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-92656588",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-03e147ca6a2c0e557",
            "security_group_rule_id": "sgr-0cb63931b34ad0122",
            "self": false,
            "source_security_group_id": "sg-05896545e4f2e7503",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_secondary.aws_security_group.cluster",
            "module.eks_secondary.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-1694300375",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-03e147ca6a2c0e557",
            "security_group_rule_id": "sgr-0da3d5d468efd8f8b",
            "self": false,
            "source_security_group_id": "sg-05896545e4f2e7503",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_secondary.aws_security_group.cluster",
            "module.eks_secondary.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-2914950977",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-03e147ca6a2c0e557",
            "security_group_rule_id": "sgr-0174df77757135639",
            "self": false,
            "source_security_group_id": "sg-05896545e4f2e7503",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_secondary.aws_security_group.cluster",
            "module.eks_secondary.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-3202524000",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-03e147ca6a2c0e557",
            "security_group_rule_id": "sgr-07de6e709faa8c105",
            "self": false,
            "source_security_group_id": "sg-05896545e4f2e7503",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_secondary.aws_security_group.cluster",
            "module.eks_secondary.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-3661861035",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-03e147ca6a2c0e557",
            "security_group_rule_id": "sgr-06a845e9e6dc12bf0",
            "self": false,
            "source_security_group_id": "sg-05896545e4f2e7503",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_secondary.aws_security_group.cluster",
            "module.eks_secondary.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-3658513658",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-03e147ca6a2c0e557",
            "security_group_rule_id": "sgr-05f1897870fadc88a",
            "self": false,
            "source_security_group_id": "sg-05896545e4f2e7503",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_secondary.aws_security_group.cluster",
            "module.eks_secondary.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-3187765700",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-03e147ca6a2c0e557",
            "security_group_rule_id": "sgr-05f66e033fe0d938b",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_secondary.aws_security_group.cluster",
            "module.eks_secondary.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-3497965664",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-03e147ca6a2c0e557",
            "security_group_rule_id": "sgr-09982cf0ae29a44ec",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_secondary.aws_security_group.cluster",
            "module.eks_secondary.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-1948326799",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-03e147ca6a2c0e557",
            "security_group_rule_id": "sgr-082a6417aada2547f",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_secondary.aws_security_group.cluster",
            "module.eks_secondary.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:872515281253:network-acl/acl-0677deacbb99f00f4",
            "default_network_acl_id": "acl-0677deacbb99f00f4",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0677deacbb99f00f4",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "872515281253",
            "subnet_ids": [
              "subnet-09e13140cc733517c",
              "subnet-0b8b7e4b4eebf1cb8",
              "subnet-0ba59b6a8d5a53a4f"
            ],
            "tags": {
              "Name": "gitops-advanced-vpc-default"
            },
            "tags_all": {
              "Name": "gitops-advanced-vpc-default"
            },
            "vpc_id": "vpc-0afb44932285d5d3c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:872515281253:route-table/rtb-0f0e132af8572c41e",
            "default_route_table_id": "rtb-0f0e132af8572c41e",
            "id": "rtb-0f0e132af8572c41e",
            "owner_id": "872515281253",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "gitops-advanced-vpc-default"
            },
            "tags_all": {
              "Name": "gitops-advanced-vpc-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0afb44932285d5d3c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:872515281253:security-group/sg-0341e2545498399f1",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0341e2545498399f1",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "872515281253",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "gitops-advanced-vpc-default"
            },
            "tags_all": {
              "Name": "gitops-advanced-vpc-default"
            },
            "vpc_id": "vpc-0afb44932285d5d3c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-087fba632dafe0771",
            "arn": "arn:aws:ec2:us-east-1:872515281253:elastic-ip/eipalloc-087fba632dafe0771",
            "domain": "vpc",
            "id": "eipalloc-087fba632dafe0771",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-196-94-214.compute-1.amazonaws.com",
            "public_ip": "34.196.94.214",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "gitops-advanced-vpc-us-east-1a"
            },
            "tags_all": {
              "Name": "gitops-advanced-vpc-us-east-1a"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cf7f1016d6f72ac6",
            "arn": "arn:aws:ec2:us-east-1:872515281253:elastic-ip/eipalloc-0cf7f1016d6f72ac6",
            "domain": "vpc",
            "id": "eipalloc-0cf7f1016d6f72ac6",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-18-233-238-176.compute-1.amazonaws.com",
            "public_ip": "18.233.238.176",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "gitops-advanced-vpc-us-east-1b"
            },
            "tags_all": {
              "Name": "gitops-advanced-vpc-us-east-1b"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:872515281253:internet-gateway/igw-08f7da121d269c0d7",
            "id": "igw-08f7da121d269c0d7",
            "owner_id": "872515281253",
            "tags": {
              "Name": "gitops-advanced-vpc"
            },
            "tags_all": {
              "Name": "gitops-advanced-vpc"
            },
            "vpc_id": "vpc-0afb44932285d5d3c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-087fba632dafe0771",
            "association_id": "eipassoc-00056d500ee7dd352",
            "connectivity_type": "public",
            "id": "nat-037bfc9009b657d80",
            "network_interface_id": "eni-03878e10f48727acb",
            "private_ip": "10.0.101.66",
            "public_ip": "34.196.94.214",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0ba59b6a8d5a53a4f",
            "tags": {
              "Name": "gitops-advanced-vpc-us-east-1a"
            },
            "tags_all": {
              "Name": "gitops-advanced-vpc-us-east-1a"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cf7f1016d6f72ac6",
            "association_id": "eipassoc-0639b034c02c1bf98",
            "connectivity_type": "public",
            "id": "nat-01ff572b9e2dfd43c",
            "network_interface_id": "eni-0f104326a266e561b",
            "private_ip": "10.0.102.135",
            "public_ip": "18.233.238.176",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-03f6201c9c80f3396",
            "tags": {
              "Name": "gitops-advanced-vpc-us-east-1b"
            },
            "tags_all": {
              "Name": "gitops-advanced-vpc-us-east-1b"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0d4c78816230caa611080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-037bfc9009b657d80",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d4c78816230caa61",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-028ba8e030d5ce6481080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-01ff572b9e2dfd43c",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-028ba8e030d5ce648",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-08f7da121d269c0d7",
            "id": "r-rtb-0fef48852d0ba38501080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0fef48852d0ba3850",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:872515281253:route-table/rtb-0d4c78816230caa61",
            "id": "rtb-0d4c78816230caa61",
            "owner_id": "872515281253",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "gitops-advanced-vpc-private-us-east-1a"
            },
            "tags_all": {
              "Name": "gitops-advanced-vpc-private-us-east-1a"
            },
            "timeouts": null,
            "vpc_id": "vpc-0afb44932285d5d3c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:872515281253:route-table/rtb-028ba8e030d5ce648",
            "id": "rtb-028ba8e030d5ce648",
            "owner_id": "872515281253",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "gitops-advanced-vpc-private-us-east-1b"
            },
            "tags_all": {
              "Name": "gitops-advanced-vpc-private-us-east-1b"
            },
            "timeouts": null,
            "vpc_id": "vpc-0afb44932285d5d3c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:872515281253:route-table/rtb-0fef48852d0ba3850",
            "id": "rtb-0fef48852d0ba3850",
            "owner_id": "872515281253",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "gitops-advanced-vpc-public"
            },
            "tags_all": {
              "Name": "gitops-advanced-vpc-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0afb44932285d5d3c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-087e473f1dc4fb1f2",
            "route_table_id": "rtb-0d4c78816230caa61",
            "subnet_id": "subnet-09e13140cc733517c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09de9f32d01b55a4f",
            "route_table_id": "rtb-028ba8e030d5ce648",
            "subnet_id": "subnet-0b8b7e4b4eebf1cb8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a90df19a20bcd9c6",
            "route_table_id": "rtb-0fef48852d0ba3850",
            "subnet_id": "subnet-0ba59b6a8d5a53a4f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-015d63b2589eab1ee",
            "route_table_id": "rtb-0fef48852d0ba3850",
            "subnet_id": "subnet-03f6201c9c80f3396"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:872515281253:subnet/subnet-09e13140cc733517c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09e13140cc733517c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "872515281253",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "gitops-advanced-vpc-private-us-east-1a"
            },
            "tags_all": {
              "Name": "gitops-advanced-vpc-private-us-east-1a"
            },
            "vpc_id": "vpc-0afb44932285d5d3c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:872515281253:subnet/subnet-0b8b7e4b4eebf1cb8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b8b7e4b4eebf1cb8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "872515281253",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "gitops-advanced-vpc-private-us-east-1b"
            },
            "tags_all": {
              "Name": "gitops-advanced-vpc-private-us-east-1b"
            },
            "vpc_id": "vpc-0afb44932285d5d3c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:872515281253:subnet/subnet-0ba59b6a8d5a53a4f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ba59b6a8d5a53a4f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "872515281253",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "gitops-advanced-vpc-public-us-east-1a"
            },
            "tags_all": {
              "Name": "gitops-advanced-vpc-public-us-east-1a"
            },
            "vpc_id": "vpc-0afb44932285d5d3c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:872515281253:subnet/subnet-03f6201c9c80f3396",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03f6201c9c80f3396",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "872515281253",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "gitops-advanced-vpc-public-us-east-1b"
            },
            "tags_all": {
              "Name": "gitops-advanced-vpc-public-us-east-1b"
            },
            "vpc_id": "vpc-0afb44932285d5d3c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:872515281253:vpc/vpc-0afb44932285d5d3c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0677deacbb99f00f4",
            "default_route_table_id": "rtb-0f0e132af8572c41e",
            "default_security_group_id": "sg-0341e2545498399f1",
            "dhcp_options_id": "dopt-0dede27c83097e229",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0afb44932285d5d3c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f0e132af8572c41e",
            "owner_id": "872515281253",
            "tags": {
              "Name": "gitops-advanced-vpc"
            },
            "tags_all": {
              "Name": "gitops-advanced-vpc"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    }
  ]
}